crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__closure__close_over_later_variable.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/close_over_later_variable.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f @1 []
      (block
         (var a @0 "a")
         (var b @0 "b")
         (fun g @0 []
            (block
               (print (name-error b))
               (print (name-error a))))
         (expr (call +1 (local g @0)))))
   (expr (call +2 (local f @1))))

----- stderr -----
