crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__closure__nested_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/nested_closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f @1 ∅)
   (fun f1 @2 []
      (block
         (var a @0 "a")
         (fun f2 @1 []
            (block
               (var b @0 "b")
               (fun f3 @1 []
                  (block
                     (var c @0 "c")
                     (fun f4 @1 []
                        (block
                           (print (name-error a))
                           (print (name-error b))
                           (print (name-error c))))
                     (expr (= f (global 1) (local f4 @1)))))
               (expr (call +2 (local f3 @1)))))
         (expr (call +2 (local f2 @1)))))
   (expr (call +3 (local f1 @2)))
   (expr (call +3 (local f @1))))

----- stderr -----
