crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__closure__reference_closure_multiple_times.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/reference_closure_multiple_times.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f @1 ∅)
   (block
      (var a @2 "a")
      (fun f_ @3 []
         (block
            (print (global a @2))
            (print (global a @2))))
      (expr (= (local f @1) (local f_ @3))))
   (expr (call +2 (local f @1))))

----- stderr -----
