crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__closure__reuse_closure_slot.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/reuse_closure_slot.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var f (local @1) ∅)
      (block
         (var a (cell @0) "a")
         (fun f_ (local @3) [] [Some(0)]
            (block
               (print (cell a @0))))
         (expr (= (local f @1) (local f_ @3))))
      (block
         (var b (local @2) "b")
         (expr (call +3 (local f @1))))))

----- stderr -----
