crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__closure__shadow_closure_with_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/closure/shadow_closure_with_local.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var foo @1 "closure")
      (fun f @2 []
         (block
            (block
               (print (global foo @1))
               (var foo @0 "shadow")
               (print (local foo @0)))
            (print (global foo @1))))
      (expr (call +3 (local f @2)))))

----- stderr -----
